kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_postcard_tuple_pair_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0x70
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3cc
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x5, x9
  mov x9, #<imm>
  mov x8, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x50]
  mov x9, #<imm>
  mov x14, x9
  str x14, [sp, #0x58]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0x60]
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x348
  ldrb w9, [x19]
  mov x14, x9
  add x19, x19, #0x1
  mov x17, x14
  and x17, x17, x2
  mov x11, x14
  and x11, x11, x5
  cmp x11, x8
  b.ne $+0x24
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x11, x9
  mov x0, x17
  mov x12, x11
  mov x12, x11
  b $+0xe0
  mov x9, #<imm>
  mov x7, x9
  mov x9, #<imm>
  mov x8, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x4, x9
  mov x9, #<imm>
  mov x5, x9
  mov x6, x17
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2a0
  mov x17, x7
  add x17, x17, x1
  sub x8, x8, x2
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x27c
  ldrb w9, [x19]
  mov x12, x9
  add x19, x19, #0x1
  cmp x8, x5
  cset x14, ne
  mov x11, x12
  and x11, x11, x0
  and x12, x12, x3
  mov x9, x11
  mov x10, x7
  lsl x9, x9, x10
  mov x7, x9
  cmp x12, x4
  cset x12, ne
  orr x6, x6, x7
  mov x7, x17
  mov x11, x12
  cbz x12, $+0x8
  cbnz x14, $+0x24c
  mov x0, x6
  mov x12, x11
  cmp x12, x26
  mov x11, x0
  lsr x11, x11, x25
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x208
  cmp x11, x15
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x1f0
  mov x9, x0
  str w9, [x21]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1d0
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1b8
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0x50]
  mov x0, x11
  and x0, x0, x12
  ldr x14, [sp, #0x58]
  mov x12, x11
  and x12, x12, x14
  ldr x11, [sp, #0x60]
  cmp x12, x11
  cset x11, ne
  cbnz x11, $+0x24
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x11, x9
  mov x25, x0
  mov x26, x11
  mov x26, x11
  b $+0xe0
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x14, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x104
  mov x3, x1
  add x3, x3, x12
  sub x2, x2, x15
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xe0
  ldrb w9, [x19]
  mov x5, x9
  add x19, x19, #0x1
  cmp x2, x14
  cset x6, ne
  mov x4, x5
  and x4, x4, x11
  and x5, x5, x25
  mov x9, x4
  mov x10, x1
  lsl x9, x9, x10
  mov x1, x9
  cmp x5, x26
  cset x5, ne
  orr x0, x0, x1
  mov x1, x3
  mov x3, x4
  mov x3, x5
  cbz x5, $+0x8
  cbnz x6, $-0x88
  mov x25, x0
  mov x26, x3
  cmp x26, x13
  mov x11, x25
  lsr x11, x11, x24
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x68
  cmp x11, x23
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x50
  str x19, [x22]
  mov x0, x22
  mov x1, x25
  add x2, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x70
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x70
  ret
