kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_postcard_vec_scalar_large_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0xa0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x4c0
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x478
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  mov x17, x24
  and x17, x17, x23
  and x15, x15, x24
  cmp x15, x14
  b.ne $+0x24
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x23, x17
  mov x14, x24
  mov x14, x24
  b $+0xe0
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x26, x9
  mov x0, x17
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3d4
  mov x3, x1
  add x3, x3, x15
  sub x2, x2, x23
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3b0
  ldrb w9, [x19]
  mov x5, x9
  add x19, x19, #0x1
  cmp x2, x26
  cset x6, ne
  mov x4, x5
  and x4, x4, x14
  and x5, x5, x24
  mov x9, x4
  mov x10, x1
  lsl x9, x9, x10
  mov x1, x9
  cmp x5, x25
  cset x5, ne
  orr x0, x0, x1
  mov x1, x3
  mov x7, x5
  cbz x5, $+0x8
  cbnz x6, $-0x84
  mov x23, x0
  mov x14, x7
  cmp x14, x13
  mov x24, x23
  lsr x24, x24, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x33c
  cmp x24, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x324
  cbnz x23, $+0x30
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, x12
  str x9, [x21, #0x8]
  mov x9, x11
  str x9, [x21, #0x10]
  mov x9, x11
  str x9, [x21]
  b $+0x2d4
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x50]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x58]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x60]
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0x68]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x70]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x78]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x80]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0x88]
  str x19, [x22]
  mov x0, x22
  mov x1, x23
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x254
  mov x9, x0
  mov x24, x9
  mov x9, x21
  mov x11, x9
  mov x9, x24
  mov x21, x9
  mov x12, x23
  mov x15, x24
  mov x9, x15
  mov x21, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x214
  ldr x13, [sp, #0x80]
  mov x14, x12
  sub x14, x14, x13
  ldr x12, [sp, #0x88]
  mov x1, x15
  add x1, x1, x12
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1e4
  ldrb w9, [x19]
  mov x13, x9
  add x19, x19, #0x1
  ldr x0, [sp, #0x50]
  mov x12, x13
  and x12, x12, x0
  ldr x2, [sp, #0x58]
  and x13, x13, x2
  ldr x25, [sp, #0x60]
  cmp x13, x25
  cset x15, ne
  cbnz x15, $+0x24
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x25, x9
  mov x15, x25
  ldr x13, [sp, #0x68]
  mov x15, x25
  b $+0xf8
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x4, x9
  mov x9, #<imm>
  mov x5, x9
  mov x9, #<imm>
  mov x6, x9
  mov x9, #<imm>
  mov x7, x9
  mov x9, #<imm>
  mov x8, x9
  mov x17, x12
  mov x12, x15
  mov x0, x13
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x128
  mov x15, x12
  add x15, x15, x4
  mov x13, x0
  sub x13, x13, x5
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x100
  ldrb w9, [x19]
  mov x25, x9
  add x19, x19, #0x1
  cmp x13, x8
  cset x26, ne
  mov x2, x25
  and x2, x2, x3
  and x25, x25, x6
  mov x9, x2
  mov x10, x12
  lsl x9, x9, x10
  mov x12, x9
  cmp x25, x7
  cset x25, ne
  orr x12, x12, x17
  mov x17, x12
  mov x12, x15
  mov x0, x13
  mov x13, x2
  mov x13, x25
  cbz x25, $+0x8
  cbnz x26, $+0x5e0
  mov x12, x17
  mov x15, x13
  cmp x15, x13
  cset x26, ne
  ldr x25, [sp, #0x70]
  mov x15, x12
  lsr x15, x15, x25
  cbnz x26, $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x78
  ldr x26, [sp, #0x78]
  cmp x15, x26
  cset x15, ne
  cbnz x15, $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x58
  mov x9, x12
  str w9, [x21]
  mov x12, x14
  mov x15, x1
  cbnz x14, $+0x58c
  mov x9, x11
  mov x21, x9
  mov x9, x24
  str x9, [x21, #0x8]
  mov x9, x23
  str x9, [x21, #0x10]
  mov x9, x23
  str x9, [x21]
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xa0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xa0
  ret
